Ignorisi velicinu slova kad se kucaju sugestije