@@ -6,9 +6,13 @@
   <description>Aplikacija projekta Bosanski Lonac.</description>
   <version>0.5-SNAPSHOT</version>
 
-   <properties>
-       <jackson-version>2.9.10.8</jackson-version>
-   </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <spring.framework>5.2.13.RELEASE</spring.framework>
+    <spring.web>5.2.13.RELEASE</spring.web>
+  </properties>
   
   <dependencies>
   	<!-- BL-Core -->
@@ -29,11 +33,6 @@
 		<artifactId>controlsfx</artifactId>
 		<version>11.1.0</version>
 	</dependency>
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>${jackson-version}</version>
-    </dependency>
   </dependencies>
   
   <build>
@@ -43,7 +42,7 @@
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.8.1</version>
               <configuration>
-                  <release>11</release>
+                <release>11</release>
               </configuration>
           </plugin>
           <plugin>
@@ -51,7 +50,15 @@
               <artifactId>javafx-maven-plugin</artifactId>
               <version>0.0.5</version>
               <configuration>
-                  <mainClass>app.Main</mainClass>
+                <options>
+                    <option>--add-exports</option>
+                    <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
+                    <option>--add-exports</option>
+                    <option>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
+                    <option>--add-exports</option>
+                    <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                </options>
+                <mainClass>app.Main</mainClass>
               </configuration>
           </plugin>
       </plugins>
